--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -86,6 +86,7 @@
                     <li><a href="../files/src-response-accountsecurityinforesponse.html"><abbr title="src/Response/AccountSecurityInfoResponse.php">AccountSecurityInfoResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-accountsummaryunit.html"><abbr title="src/Response/Model/AccountSummaryUnit.php">AccountSummaryUnit.php</abbr></a></li>
                     <li><a href="../files/src-realtime-payload-action-ackaction.html"><abbr title="src/Realtime/Payload/Action/AckAction.php">AckAction.php</abbr></a></li>
+                    <li><a href="../files/src-exception-checkpoint-acknowledgeformexception.html"><abbr title="src/Exception/Checkpoint/AcknowledgeFormException.php">AcknowledgeFormException.php</abbr></a></li>
                     <li><a href="../files/src-response-model-action.html"><abbr title="src/Response/Model/Action.php">Action.php</abbr></a></li>
                     <li><a href="../files/src-response-model-actionbadge.html"><abbr title="src/Response/Model/ActionBadge.php">ActionBadge.php</abbr></a></li>
                     <li><a href="../files/src-response-model-actionenabledbysurface.html"><abbr title="src/Response/Model/ActionEnabledBySurface.php">ActionEnabledBySurface.php</abbr></a></li>
@@ -231,8 +232,8 @@
                     <li><a href="../files/src-response-createhighlightresponse.html"><abbr title="src/Response/CreateHighlightResponse.php">CreateHighlightResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createliveresponse.html"><abbr title="src/Response/CreateLiveResponse.php">CreateLiveResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createserieresponse.html"><abbr title="src/Response/CreateSerieResponse.php">CreateSerieResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
                     <li><a href="../files/src-response-model-creative.html"><abbr title="src/Response/Model/Creative.php">Creative.php</abbr></a></li>
+                    <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
                 </ul>
                                     <h3>D</h3>
         <ul class="phpdocumentor-list">
@@ -372,8 +373,8 @@
         <ul class="phpdocumentor-list">
                     <li><a href="../files/src-realtime-handler-handlerexception.html"><abbr title="src/Realtime/Handler/HandlerException.php">HandlerException.php</abbr></a></li>
                     <li><a href="../files/src-realtime-handlerinterface.html"><abbr title="src/Realtime/HandlerInterface.php">HandlerInterface.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-hashtag.html"><abbr title="src/Response/Model/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-request-hashtag.html"><abbr title="src/Request/Hashtag.php">Hashtag.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-hashtag.html"><abbr title="src/Response/Model/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-hashtagfollow.html"><abbr title="src/Response/Model/HashtagFollow.php">HashtagFollow.php</abbr></a></li>
                     <li><a href="../files/src-response-hashtagsresponse.html"><abbr title="src/Response/HashtagsResponse.php">HashtagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-headline.html"><abbr title="src/Response/Model/Headline.php">Headline.php</abbr></a></li>
@@ -552,8 +553,8 @@
                     <li><a href="../files/src-response-model-producttags.html"><abbr title="src/Response/Model/ProductTags.php">ProductTags.php</abbr></a></li>
                     <li><a href="../files/src-response-profilenoticeresponse.html"><abbr title="src/Response/ProfileNoticeResponse.php">ProfileNoticeResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-promotionsunit.html"><abbr title="src/Response/Model/PromotionsUnit.php">PromotionsUnit.php</abbr></a></li>
-                    <li><a href="../files/src-push.html"><abbr title="src/Push.php">Push.php</abbr></a></li>
                     <li><a href="../files/src-request-push.html"><abbr title="src/Request/Push.php">Push.php</abbr></a></li>
+                    <li><a href="../files/src-push.html"><abbr title="src/Push.php">Push.php</abbr></a></li>
                     <li><a href="../files/src-response-pushpreferencesresponse.html"><abbr title="src/Response/PushPreferencesResponse.php">PushPreferencesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-pushregisterresponse.html"><abbr title="src/Response/PushRegisterResponse.php">PushRegisterResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-pushsettings.html"><abbr title="src/Response/Model/PushSettings.php">PushSettings.php</abbr></a></li>
@@ -588,8 +589,8 @@
                     <li><a href="../files/src-response-recoveryresponse.html"><abbr title="src/Response/RecoveryResponse.php">RecoveryResponse.php</abbr></a></li>
                     <li><a href="../files/src-media-geometry-rectangle.html"><abbr title="src/Media/Geometry/Rectangle.php">Rectangle.php</abbr></a></li>
                     <li><a href="../files/src-settings-storage-redis.html"><abbr title="src/Settings/Storage/Redis.php">Redis.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-reel.html"><abbr title="src/Response/Model/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-request-reel.html"><abbr title="src/Request/Reel.php">Reel.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-reel.html"><abbr title="src/Response/Model/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-response-reelmediaviewerresponse.html"><abbr title="src/Response/ReelMediaViewerResponse.php">ReelMediaViewerResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-reelmention.html"><abbr title="src/Response/Model/ReelMention.php">ReelMention.php</abbr></a></li>
                     <li><a href="../files/src-response-reelsettingsresponse.html"><abbr title="src/Response/ReelSettingsResponse.php">ReelSettingsResponse.php</abbr></a></li>
@@ -657,8 +658,8 @@
                     <li><a href="../files/src-response-model-sharedfollower.html"><abbr title="src/Response/Model/SharedFollower.php">SharedFollower.php</abbr></a></li>
                     <li><a href="../files/src-response-model-sharedfolloweraccountsinfo.html"><abbr title="src/Response/Model/SharedFollowerAccountsInfo.php">SharedFollowerAccountsInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-sharedfollowersresponse.html"><abbr title="src/Response/SharedFollowersResponse.php">SharedFollowersResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shoppingtype.html"><abbr title="src/Response/Model/ShoppingType.php">ShoppingType.php</abbr></a></li>
                     <li><a href="../files/src-response-shouldrequireprofessionalaccountresponse.html"><abbr title="src/Response/ShouldRequireProfessionalAccountResponse.php">ShouldRequireProfessionalAccountResponse.php</abbr></a></li>
                     <li><a href="../files/src-signatures.html"><abbr title="src/Signatures.php">Signatures.php</abbr></a></li>
@@ -676,8 +677,8 @@
                     <li><a href="../files/src-settings-storageinterface.html"><abbr title="src/Settings/StorageInterface.php">StorageInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-stories.html"><abbr title="src/Response/Model/Stories.php">Stories.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storiesnetego.html"><abbr title="src/Response/Model/StoriesNetego.php">StoriesNetego.php</abbr></a></li>
-                    <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
+                    <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-storyanswersresponse.html"><abbr title="src/Response/StoryAnswersResponse.php">StoryAnswersResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storyappattribution.html"><abbr title="src/Response/Model/StoryAppAttribution.php">StoryAppAttribution.php</abbr></a></li>
                     <li><a href="../files/src-response-storycharitiesresponse.html"><abbr title="src/Response/StoryCharitiesResponse.php">StoryCharitiesResponse.php</abbr></a></li>
@@ -794,8 +795,8 @@
                     <li><a href="../files/src-response-model-unpredictablekeys-userunpredictablecontainer.html"><abbr title="src/Response/Model/UnpredictableKeys/UserUnpredictableContainer.php">UserUnpredictableContainer.php</abbr></a></li>
                     <li><a href="../files/src-response-usernamesuggestionsresponse.html"><abbr title="src/Response/UsernameSuggestionsResponse.php">UsernameSuggestionsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-userslookupresponse.html"><abbr title="src/Response/UsersLookupResponse.php">UsersLookupResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-request-usertag.html"><abbr title="src/Request/Usertag.php">Usertag.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-response-usertagsresponse.html"><abbr title="src/Response/UsertagsResponse.php">UsertagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-utils.html"><abbr title="src/Utils.php">Utils.php</abbr></a></li>
                 </ul>
@@ -803,6 +804,7 @@
         <ul class="phpdocumentor-list">
                     <li><a href="../files/src-response-validateurlresponse.html"><abbr title="src/Response/ValidateURLResponse.php">ValidateURLResponse.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-verifycodeexception.html"><abbr title="src/Exception/Checkpoint/VerifyCodeException.php">VerifyCodeException.php</abbr></a></li>
+                    <li><a href="../files/src-exception-checkpoint-verifyemailcodeformexception.html"><abbr title="src/Exception/Checkpoint/VerifyEmailCodeFormException.php">VerifyEmailCodeFormException.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-verifyemailexception.html"><abbr title="src/Exception/Checkpoint/VerifyEmailException.php">VerifyEmailException.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-verifysmscodeformforsmscaptchaexception.html"><abbr title="src/Exception/Checkpoint/VerifySMSCodeFormForSMSCaptchaException.php">VerifySMSCodeFormForSMSCaptchaException.php</abbr></a></li>
                     <li><a href="../files/src-response-verifysmscoderesponse.html"><abbr title="src/Response/VerifySMSCodeResponse.php">VerifySMSCodeResponse.php</abbr></a></li>
