--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1476,6 +1476,10 @@ digits. Bit-ordering is a concern, but is a non-issue as long as the
 to-string and from-string methods in this class are consistent.</dd>
                             <dt><a href="../classes/InstagramAPI-Media-PDQ-PDQHasher.html"><abbr title="\InstagramAPI\Media\PDQ\PDQHasher">PDQHasher</abbr></a></dt>
                 <dd></dd>
+                            <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-AcknowledgeFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\AcknowledgeFormException">AcknowledgeFormException</abbr></a></dt>
+                <dd>All server-response API related exceptions must derive from this class.</dd>
+                            <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-VerifyEmailCodeFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\VerifyEmailCodeFormException">VerifyEmailCodeFormException</abbr></a></dt>
+                <dd>All server-response API related exceptions must derive from this class.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
