--- a/documentation/classes/InstagramAPI-Exception-ServerMessageThrower.html
+++ b/documentation/classes/InstagramAPI-Exception-ServerMessageThrower.html
@@ -176,6 +176,8 @@
     &#039;Checkpoint\\UFACBlockingFormException&#039; =&gt; [&#039;UFACBlockingForm&#039;],
     &#039;Checkpoint\\SelectContactPointRecoveryFormException&#039; =&gt; [&#039;SelectContactPointRecoveryForm&#039;],
     &#039;Checkpoint\\IeForceSetNewPasswordFormException&#039; =&gt; [&#039;IeForceSetNewPasswordForm&#039;],
+    &#039;Checkpoint\\AcknowledgeFormException&#039; =&gt; [&#039;AcknowledgeForm&#039;],
+    &#039;Checkpoint\\VerifyEmailCodeFormException&#039; =&gt; [&#039;VerifyEmailCodeForm&#039;],
 ]</td>
                 </tr>
                                                                             <tr>
@@ -286,6 +288,8 @@
     &#039;Checkpoint\\UFACBlockingFormException&#039; =&gt; [&#039;UFACBlockingForm&#039;],
     &#039;Checkpoint\\SelectContactPointRecoveryFormException&#039; =&gt; [&#039;SelectContactPointRecoveryForm&#039;],
     &#039;Checkpoint\\IeForceSetNewPasswordFormException&#039; =&gt; [&#039;IeForceSetNewPasswordForm&#039;],
+    &#039;Checkpoint\\AcknowledgeFormException&#039; =&gt; [&#039;AcknowledgeForm&#039;],
+    &#039;Checkpoint\\VerifyEmailCodeFormException&#039; =&gt; [&#039;VerifyEmailCodeForm&#039;],
 ]</span>
     </code>
         <section class="phpdocumentor-description">If the first letter of a pattern is &quot;/&quot;, we treat it as a regex.
@@ -324,7 +328,7 @@ of the API! Nothing else.</section>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Exception/ServerMessageThrower.php"><a href="../files/src-exception-servermessagethrower.html"><abbr title="src/Exception/ServerMessageThrower.php">ServerMessageThrower.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">136</span>
+        <span class="phpdocumentor-element-found-in__line">138</span>
     </aside>
         <p class="phpdocumentor-summary">Parses a server message and throws the appropriate exception.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -416,7 +420,7 @@ object (if available).</p></section></dd>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Exception/ServerMessageThrower.php"><a href="../files/src-exception-servermessagethrower.html"><abbr title="src/Exception/ServerMessageThrower.php">ServerMessageThrower.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">253</span>
+        <span class="phpdocumentor-element-found-in__line">255</span>
     </aside>
         <p class="phpdocumentor-summary">Nicely reformats externally generated exception messages.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
