--- a/documentation/namespaces/instagramapi-exception-checkpoint.html
+++ b/documentation/namespaces/instagramapi-exception-checkpoint.html
@@ -121,6 +121,10 @@
                 <dd>All server-response API related exceptions must derive from this class.</dd>
                             <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-IeForceSetNewPasswordFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\IeForceSetNewPasswordFormException">IeForceSetNewPasswordFormException</abbr></a></dt>
                 <dd>All server-response API related exceptions must derive from this class.</dd>
+                            <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-AcknowledgeFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\AcknowledgeFormException">AcknowledgeFormException</abbr></a></dt>
+                <dd>All server-response API related exceptions must derive from this class.</dd>
+                            <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-VerifyEmailCodeFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\VerifyEmailCodeFormException">VerifyEmailCodeFormException</abbr></a></dt>
+                <dd>All server-response API related exceptions must derive from this class.</dd>
             
                     </dl>
     
